tests/spec/emit/snapshots/array_let_else_rest_declares_sub_array.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn f(arr: Array<int, 3>) -> Array<int, 2> {
    let [0, ..rest] = arr else { return [9, 9] }
    rest
  }
---
package main

func f(arr [3]int) [2]int {
	if arr[0] != 0 {
		return [2]int{9, 9}
	}
	rest := ([2]int)(arr[1:])
	return rest
}
