tests/spec/emit/snapshots/array_literal.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn test() -> Array<int, 3> {
    [1, 2, 3]
  }
---
package main

func test() [3]int {
	return [3]int{1, 2, 3}
}
