tests/spec/emit/snapshots/array_new_default_variant_first_uses_go_zero_fill.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  enum Colour {
    #[default]
    Red,
    Green,
  }
  
  fn swatch() -> Array<Colour, 3> {
    Array.new<Colour, 3>()
  }
---
package main

func MakeColourRed() Colour {
	return Colour{Tag: ColourRed}
}

func MakeColourGreen() Colour {
	return Colour{Tag: ColourGreen}
}

type ColourTag uint8

const (
	ColourRed ColourTag = iota
	ColourGreen
)

type Colour struct {
	Tag ColourTag
}

func swatch() [3]Colour {
	return [3]Colour{}
}
