tests/spec/emit/snapshots/array_new_option_element_fills_with_none.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn opts() -> Array<Option<int>, 2> {
    Array.new<Option<int>, 2>()
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func opts() [2]lisette.Option[int] {
	return func() [2]lisette.Option[int] {
		var arr [2]lisette.Option[int]
		for i := range arr {
			arr[i] = lisette.MakeOptionNone[int]()
		}
		return arr
	}()
}
