tests/spec/emit/snapshots/array_new_primitive_elements_use_go_zero_fill.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn ints() -> Array<int, 3> {
    Array.new<int, 3>()
  }
  
  fn bools() -> Array<bool, 2> {
    Array.new<bool, 2>()
  }
---
package main

func ints() [3]int {
	return [3]int{}
}

func bools() [2]bool {
	return [2]bool{}
}
