tests/spec/emit/snapshots/array_new_turbofish.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn make() -> Array<int, 5> {
    Array.new<int, 5>()
  }
---
package main

func make_() [5]int {
	return [5]int{}
}
